samples/_failures_safe/1761087042_6d42e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05075e2b.c: In function ‘main’:
./samples/SAFE/__tmp_05075e2b.c:157:28: error: missing terminating " character
  157 |                     printf("Error: Matrices must have same dimensions for addition.\
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_05075e2b.c:157:21: error: expected expression at end of input
  157 |                     printf("Error: Matrices must have same dimensions for addition.\
      |                     ^~~~~~
./samples/SAFE/__tmp_05075e2b.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05075e2b.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05075e2b.c:157:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05075e2b.c:157:21: error: expected declaration or statement at end of input
